Add “ready to roll” button

--- a/public/components/timer-controls/timer-controls.html
+++ b/public/components/timer-controls/timer-controls.html
@@ -5,4 +5,6 @@
   <script src="script.js"></script>
 
   <link rel="import" href="/vendor/paper-swatch-picker/paper-swatch-picker.html" />
+  <link rel="import" href="/vendor/paper-button/paper-button.html" />
+  <link rel="import" href="/vendor/iron-icons/av-icons.html" />
 </head>
